[gd_scene load_steps=2 format=3 uid="uid://crosshair_001"]

[ext_resource type="Script" path="res://Crosshair.gd" id="1_crosshair"]

[node name="Crosshair" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_crosshair")

[node name="CrosshairLineTop" type="Line2D" parent="."]
width = 2.0
default_color = Color(1, 1, 1, 1)

[node name="CrosshairLineBottom" type="Line2D" parent="."]
width = 2.0
default_color = Color(1, 1, 1, 1)

[node name="CrosshairLineLeft" type="Line2D" parent="."]
width = 2.0
default_color = Color(1, 1, 1, 1)

[node name="CrosshairLineRight" type="Line2D" parent="."]
width = 2.0
default_color = Color(1, 1, 1, 1)
